ubuntu-build: consider amd64v3 as valid architecture

--- a/doc/ubuntu-build.1
+++ b/doc/ubuntu-build.1
@@ -43,7 +43,7 @@ operations.
 \fB\-a\fR ARCHITECTURE, \fB\-\-arch\fR=\fIARCHITECTURE\fR
 Rebuild or rescore a specific architecture. Valid
 architectures are:
-armhf, arm64, amd64, i386, powerpc, ppc64el, riscv64, s390x.
+armhf, arm64, amd64, amd64v3, i386, powerpc, ppc64el, riscv64, s390x.
 .TP
 Batch processing:
 .IP
@@ -66,7 +66,7 @@ Rescore builds to <priority>.
 \fB\-\-arch\fR=\fIARCHITECTURE\fR
 Affect only 'architecture' (can be used several
 times). Valid architectures are:
-arm64, amd64, i386, powerpc, ppc64el, riscv64, s390x.
+armhf, arm64, amd64, amd64v3, i386, powerpc, ppc64el, riscv64, s390x.
 .IP
 \fB\-A=\fIARCHIVE\fR
 Act on the named archive (ppa) instead of on the main Ubuntu archive.
