Demote sudo to Recommends
... and indicate which tools need it in the package description.

At least on current Debian testing, `run0` is an adequate non-setuid
replacement for `sudo` for typical interactive purposes.  The only
obstacle to me removing `sudo` from my system entirely is that
`ubuntu-dev-tools` depends on it, but only for tools that I don't need
any more.

Given that a significant subset of this package is useful without `sudo`
(e.g. `pull-debian-source` and friends, `syncpackage`, `backportpackage`
provided that you aren't asking it to build using `pbuilder`, and so
on), I think Recommends would be more appropriate than Depends.  This
won't affect Ubuntu systems at present since `sudo` is still in the
minimal seed, and it also won't affect typical users who install with
Recommends, but it would make it easier for some users to choose to
reduce their security exposure.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-dev-tools (0.209) UNRELEASED; urgency=medium
+
+  * Demote sudo to Recommends, and indicate which tools need it in the
+    package description.
+
+ -- Colin Watson <cjwatson@debian.org>  Thu, 01 Jan 2026 16:05:08 +0000
+
 ubuntu-dev-tools (0.208) unstable; urgency=medium
 
   [ Gianfranco Costamagna ]
